# datoso_seed_translatedenglish

./: README.md  pyproject.toml
src/datoso_seed_translatedenglish/: __init__.py  actions.py  dats.py  fetch.py  rules.py
